--- a/k8s/k0sctl.yaml
+++ b/k8s/k0sctl.yaml
@@ -15,17 +15,17 @@ spec:
         - --debug
       files:
         - name: metallb-ipaddresspool
-          src: metallb-crds.yaml
+          src: ./metallb/IPAddressPool.yaml
           dstDir: /var/lib/k0s/manifests/metallb/
           perm: 0644
-    - role: worker
-      ssh:
-        address: duytran-app-large-public-ip
-        user: root
-        port: 22
-        keyPath: ~/.ssh/digitalOceanKey
-      installFlags:
-        - --debug
+    # - role: worker
+    #   ssh:
+    #     address: duytran-app-large-public-ip
+    #     user: root
+    #     port: 22
+    #     keyPath: ~/.ssh/digitalOceanKey
+    #   installFlags:
+    #     - --debug
   k0s:
     config:
       apiVersion: k0s.k0sproject.io/v1beta1
@@ -43,9 +43,19 @@ spec:
               #   url: https://argoproj.github.io/argo-helm
             charts:
               - name: traefik
-                version: 35.4.0
-                namespace: default
                 chartname: traefik/traefik
+                version: "34.3.0"
+                namespace: default
+                values: |
+                  additionalArguments:
+                    - --log.level=DEBUG
+                    - --api
+                    - --api.dashboard=true
+                    - --api.insecure=true
+                  providers:
+                    kubernetesIngress:
+                      publishedService:
+                        enabled: true
               - name: metallb
                 chartname: oci://registry-1.docker.io/bitnamicharts/metallb
                 version: 6.4.13
@@ -53,11 +63,6 @@ spec:
         api:
           k0sApiPort: 9443
           port: 6443
-          # not sure about this
-          sans:
-            - 127.0.0.1
-            - localhost
-            - k8s.duytran.app
         installConfig:
           users:
             etcdUser: etcd
