--- a/k8s/k0sctl.yaml
+++ b/k8s/k0sctl.yaml
@@ -5,12 +5,12 @@ metadata:
   user: admin
 spec:
   hosts:
-    - role: controller
+    - role: single
       ssh:
-        address: duytran-app-public-ip
-        user: root
+        address: 192.168.50.240
+        user: duytran
         port: 22
-        keyPath: ~/.ssh/digitalOceanKey
+        keyPath: ~/.ssh/id_rsa
       installFlags:
         - --debug
       files:
@@ -18,14 +18,6 @@ spec:
           src: ./metallb/IPAddressPool.yaml
           dstDir: /var/lib/k0s/manifests/metallb/
           perm: 0644
-  # - role: worker
-  #   ssh:
-  #     address: duytran-app-large-public-ip
-  #     user: root
-  #     port: 22
-  #     keyPath: ~/.ssh/digitalOceanKey
-  #   installFlags:
-  #     - --debug
   k0s:
     config:
       apiVersion: k0s.k0sproject.io/v1beta1
@@ -39,9 +31,15 @@ spec:
             repositories:
               - name: traefik
                 url: https://traefik.github.io/charts
-              - name: argocd
-                url: https://argoproj.github.io/argo-helm
+              - name: metallb
+                url: https://metallb.github.io/metallb
+              # - name: argocd
+              #   url: https://argoproj.github.io/argo-helm
             charts:
+              - name: metallb
+                chartname: metallb/metallb
+                version: 0.15.2
+                namespace: metallb-system
               - name: traefik
                 chartname: traefik/traefik
                 version: 34.3.0
@@ -56,14 +54,6 @@ spec:
                     kubernetesIngress:
                       publishedService:
                         enabled: true
-              - name: metallb
-                chartname: oci://registry-1.docker.io/bitnamicharts/metallb
-                version: 6.4.13
-                namespace: metallb-system
-              - name: traefik
-                chartname: traefik/traefik
-                version: 8.5.10
-                namespace: metallb-system
         api:
           k0sApiPort: 9443
           port: 6443
