--- a/k8s/k0sctl.yaml
+++ b/k8s/k0sctl.yaml
@@ -33,14 +33,16 @@ spec:
                 url: https://traefik.github.io/charts
               - name: metallb
                 url: https://metallb.github.io/metallb
-              # - name: argocd
-              #   url: https://argoproj.github.io/argo-helm
+              - name: argocd
+                url: https://argoproj.github.io/argo-helm
             charts:
               - name: metallb
+                order: 1
                 chartname: metallb/metallb
                 version: 0.15.2
                 namespace: metallb-system
               - name: traefik
+                order: 2
                 chartname: traefik/traefik
                 version: 34.3.0
                 namespace: default
@@ -54,6 +56,18 @@ spec:
                     kubernetesIngress:
                       publishedService:
                         enabled: true
+              - name: argocd
+                order: 3
+                chartname: argocd/argo-cd
+                version: 7.7.12
+                namespace: argocd
+                values: |
+                  server:
+                    service:
+                      type: LoadBalancer
+                  configs:
+                    params:
+                      server.insecure: true
         api:
           k0sApiPort: 9443
           port: 6443
