update traefik namespace

--- a/k8s/k0sctl.yaml
+++ b/k8s/k0sctl.yaml
@@ -50,7 +50,7 @@ spec:
                 order: 2
                 chartname: traefik/traefik
                 version: 34.3.0
-                namespace: default
+                namespace: traefik
                 values: |
                   additionalArguments:
                     - --log.level=DEBUG
