--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -25,7 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       image_tag: ${{ steps.version.outputs.tag }}
-      image_name: ${{ secrets.docker_username }}/${{ inputs.app_name }}
+      image_name: ${{ steps.image.outputs.name }}
 
     steps:
       - uses: actions/checkout@v4
@@ -33,6 +33,10 @@ jobs:
       - name: Generate version
         id: version
         run: echo "tag=v$(date +%Y%m%d-%H%M%S)-$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+
+      - name: Set image name
+        id: image
+        run: echo "name=${{ secrets.docker_username }}/${{ inputs.app_name }}" >> $GITHUB_OUTPUT
 
       - uses: docker/setup-buildx-action@v3
 
@@ -46,7 +50,7 @@ jobs:
           context: ${{ inputs.app_path }}
           push: true
           tags: |
-            ${{ secrets.docker_username }}/${{ inputs.app_name }}:${{ steps.version.outputs.tag }}
-            ${{ secrets.docker_username }}/${{ inputs.app_name }}:latest
+            ${{ steps.image.outputs.name }}:${{ steps.version.outputs.tag }}
+            ${{ steps.image.outputs.name }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
