--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -9,9 +9,10 @@ on:
       app_path:
         required: true
         type: string
-    secrets:
       docker_username:
         required: true
+        type: string
+    secrets:
       docker_password:
         required: true
     outputs:
@@ -36,13 +37,13 @@ jobs:
 
       - name: Set image name
         id: image
-        run: echo "name=${{ secrets.docker_username }}/${{ inputs.app_name }}" >> $GITHUB_OUTPUT
+        run: echo "name=${{ inputs.docker_username }}/${{ inputs.app_name }}" >> $GITHUB_OUTPUT
 
       - uses: docker/setup-buildx-action@v3
 
       - uses: docker/login-action@v3
         with:
-          username: ${{ secrets.docker_username }}
+          username: ${{ inputs.docker_username }}
           password: ${{ secrets.docker_password }}
 
       - uses: docker/build-push-action@v6
