update counter manifest, use kustomization for namespace

--- a/apps/visitor-counter/manifests/kustomization.yaml
+++ b/apps/visitor-counter/manifests/kustomization.yaml
@@ -1,7 +1,17 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
+namespace: stateful-apps
+
+commonLabels:
+  app: visitor-counter
+
 resources:
   - pvc.yaml
   - deployment.yaml
   - service.yaml
   - ingress.yaml
+
+images:
+  - name: duytran410/visitor-counter
+    newTag: latest
