--- a/apps/adguard/adguard.argoproj.yaml
+++ b/apps/adguard/adguard.argoproj.yaml
@@ -21,37 +21,68 @@ spec:
 
         service:
           main:
-            type: LoadBalancer
-            annotations:
-              metallb.universe.tf/loadBalancerIPs: "192.168.50.102"
+            type: ClusterIP
             ports:
               http:
                 port: 3000
 
-          dns:
+          dns-https:
             enabled: true
-            type: LoadBalancer
-            annotations:
-              metallb.universe.tf/loadBalancerIPs: "192.168.50.103"
+            type: ClusterIP
             ports:
-              tcp:
+              dns-https:
+                enabled: true
+                port: 443
+                protocol: TCP
+                targetPort: 3000
+
+          dns-tcp:
+            enabled: true
+            type: NodePort
+            ports:
+              dns-tcp:
                 enabled: true
                 port: 53
                 protocol: TCP
                 targetPort: 53
-              udp:
+                nodePort: 30053
+
+          dns-udp:
+            enabled: true
+            type: NodePort
+            ports:
+              dns-udp:
                 enabled: true
                 port: 53
                 protocol: UDP
                 targetPort: 53
+                nodePort: 30053
+
+        ingress:
+          main:
+            enabled: true
+            ingressClassName: traefik
+            annotations:
+              traefik.ingress.kubernetes.io/router.entrypoints: web
+            hosts:
+              - host: dns.duytran.app
+                paths:
+                  - path: /dns-query
+                    pathType: Prefix
 
         persistence:
           config:
             enabled: true
-            type: emptyDir
+            type: pvc
+            storageClass: openebs-hostpath
+            size: 1Gi
+            accessMode: ReadWriteOnce
           data:
             enabled: true
-            type: emptyDir
+            type: pvc
+            storageClass: openebs-hostpath
+            size: 5Gi
+            accessMode: ReadWriteOnce
 
         resources:
           requests:
@@ -63,7 +94,7 @@ spec:
 
   destination:
     server: https://kubernetes.default.svc
-    namespace: adguard
+    namespace: stateful-apps
 
   syncPolicy:
     automated:
