--- a/apps/hello-world/manifests/kustomization.yaml
+++ b/apps/hello-world/manifests/kustomization.yaml
@@ -1,7 +1,16 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+namespace: default
+
+commonLabels:
+  app: hello-world
+
 resources:
   - deployment.yaml
   - service.yaml
   - ingress.yaml
+
+images:
+  - name: duytran410/hello-world
+    newTag: latest
