--- a/k8s/k0sctl.yaml
+++ b/k8s/k0sctl.yaml
@@ -5,7 +5,7 @@ metadata:
   user: admin
 spec:
   hosts:
-    - role: single
+    - role: controller
       ssh:
         address: 167.99.131.174
         user: root
@@ -13,11 +13,6 @@ spec:
         keyPath: ~/.ssh/id_rsa
       installFlags:
         - --debug
-      # Comment this out if the target host doesn't have firewall problem
-      # hooks:
-      # apply:
-      # before:
-      # - sudo iptables-restore < /etc/iptables/iptables.rules
       files:
         - name: cloudflare-tunnel-secrets
           src: ./cloudflare-tunnel/cloudflare-tunnel-secret.yaml
@@ -31,6 +26,19 @@ spec:
           src: ./velero/auto-restore-config.yaml
           dstDir: /var/lib/k0s/manifests/velero/
           perm: 0644
+    - role: worker
+      ssh:
+        address: 192.168.50.240
+        user: duytran
+        port: 22
+        keyPath: ~/.ssh/id_rsa
+      installFlags:
+        - --debug
+      # Comment this out if the target host doesn't have firewall problem
+      hooks:
+        apply:
+          before:
+            - sudo iptables-restore < /etc/iptables/iptables.rules
   k0s:
     config:
       apiVersion: k0s.k0sproject.io/v1beta1
