--- a/apps/ray/manifests/ray-cluster-sample.yaml
+++ b/apps/ray/manifests/ray-cluster-sample.yaml
@@ -11,7 +11,7 @@ spec:
       spec:
         containers:
           - name: ray-head
-            image: rayproject/ray:2.9.0
+            image: rayproject/ray:nightly-aarch64
             resources:
               limits:
                 cpu: "1"
@@ -36,7 +36,7 @@ spec:
         spec:
           containers:
             - name: ray-worker
-              image: rayproject/ray:2.9.0
+              image: rayproject/ray:nightly-aarch64
               resources:
                 limits:
                   cpu: "1"
