--- a/apps/ray/operator.yaml
+++ b/apps/ray/operator.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: kuberay-operator
   namespace: argocd
+  annotations:
+    argocd.argoproj.io/sync-wave: "0" # Apply first
 spec:
   project: default
 
