--- a/apps/ray/manifests/jupyter-deployment.yaml
+++ b/apps/ray/manifests/jupyter-deployment.yaml
@@ -65,7 +65,7 @@ spec:
     - to:
         - namespaceSelector:
             matchLabels:
-              name: kube-system
+              kubernetes.io/metadata.name: kube-system
       ports:
         - protocol: UDP
           port: 53
