Revert "update volumn mount jupyter"
This reverts commit 8846672033cc2284dcdec1962164b9e51e650a09.

--- a/apps/ray/manifests/jupyter-deployment.yaml
+++ b/apps/ray/manifests/jupyter-deployment.yaml
@@ -36,7 +36,7 @@ spec:
               value: "ray://raycluster-sample-head-svc.ray-system.svc.cluster.local:10001"
           volumeMounts:
             - name: notebooks
-              mountPath: /home/ray
+              mountPath: /home/jovyan
       volumes:
         - name: notebooks
           persistentVolumeClaim:
