--- a/apps/ray/manifests/jupyter-deployment.yaml
+++ b/apps/ray/manifests/jupyter-deployment.yaml
@@ -20,7 +20,8 @@ spec:
           args:
             - |
               pip install jupyterlab
-              jupyter lab --ip=0.0.0.0 --port=8888 --no-browser --allow-root --NotebookApp.token='' --NotebookApp.password=''
+              mkdir -p /home/jovyan/notebook-123
+              jupyter lab --ip=0.0.0.0 --port=8888 --no-browser --allow-root --NotebookApp.token='' --NotebookApp.password='' --notebook-dir=/home/jovyan/notebook-123
           ports:
             - containerPort: 8888
               name: jupyter
